--- a/app/src/main/res/layout/grid.xml
+++ b/app/src/main/res/layout/grid.xml
@@ -54,6 +54,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/carPhoto_ll_id"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
